fix overflow

--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -6,6 +6,7 @@ body {
 	font-size: 16px;
 	color: #4c4c4c;
 	font-family: "Avenir", Gill Sans, Gotham, Helvetica, Arial, sans-serif;
+	overflow-x: hidden;
 }
 
 .maxW {
